modificando js haciendolo mas accesible

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ ul {
 }
 
 p {
-  font-weight:200;
+  font-weight:600;
 }
 
 ol,
@@ -49,6 +49,7 @@ img {
   --secondary-font: "Open Sans", sans-serif;
   --shadow: rgba(40, 40, 40, 0.75);
   --gris-claro: #fbfbfb;
+  --azul-claro: #a5c8ff;
 }
 
 body, header, section {
@@ -73,6 +74,8 @@ body, header, section {
   margin: 16px 0 8px;
   padding: 8px;
   text-decoration: none;
+  border: 2px solid var(--gris-claro);
+  outline: 3px solid var(--azul);
 }
 
 .header{
@@ -136,6 +139,14 @@ nav {
   color: var(--azul);
 }
 
+.nav-item:focus-within {
+  background-color: var(--azul);
+}
+.nav-item a:focus {
+  outline: none;
+  color: var(--blanco);
+
+}
 
 .intro {
   margin: 24px 196px 0;
@@ -166,6 +177,16 @@ nav {
   padding-bottom: 40px;
 }
 
+.social-media li a:focus {
+  outline: none;
+}
+
+.social-media li:focus-within {
+  outline: 3px solid var(--azul);
+  padding: 8px;
+  border-radius: 5px;
+}
+
 .social-link-text {
   padding-right: 10px;
   padding-left: 8px;
@@ -180,7 +201,8 @@ nav {
 
 .window {
   overflow: hidden;
-  width: 805px;
+  width: 815px;
+  padding: 8px;
 }
 
 .project-container {
@@ -196,6 +218,11 @@ nav {
 .project-container button {
   background: none;
   border: none;
+  padding: 0;
+}
+
+.project-container button:focus-within {
+  outline: 3px solid var(--azul);
 }
 
 .project {
@@ -236,6 +263,10 @@ nav {
   border-radius: 50%;
 }
 
+.arrow:focus {
+  outline: 3px solid var(--azul);
+}
+
 .contact {
   color: var(--blanco);
     font-family: var(--main-font);
@@ -265,8 +296,12 @@ nav {
 }
 
 input {
-  outline: none;
   width: 100%;
+}
+
+input:focus {
+  outline: 3px solid #a5c8ff;
+  padding: 8px;
 }
 
 .send-button {
