--- a/styles.css
+++ b/styles.css
@@ -154,6 +154,7 @@ nav {
   color: #464646;
 }
 
+
 .social-media {
   align-items: center;
   display: flex;
@@ -174,7 +175,7 @@ nav {
   font-family: var(--secondary-font);
   text-decoration: none;
   padding-right: 60px;
-  padding-bottom: 40px;
+  padding-bottom: 20px;
 }
 
 .social-media li a:focus {
@@ -225,7 +226,7 @@ nav {
   outline: 3px solid var(--azul);
 }
 
-.project {
+.project-img {
   border-radius: 5px;
   border: 2px solid #000;
   display: inline-block;
@@ -304,7 +305,8 @@ input:focus {
   padding: 8px;
 }
 
-.send-button {
+.send-button,
+.modal-button {
   align-items: center;
   background-color: var(--blanco);
   border-radius: 5px;
@@ -317,6 +319,13 @@ input:focus {
   width: 150px;
   margin-left: auto;
   font-size: 16px;
+  cursor: pointer;
+}
+
+.send-button:focus,
+.modal-button:focus {
+  border: 5px solid var(--azul);
+  outline: 3px solid var(--blanco);
 }
 
 .notification {
@@ -337,7 +346,7 @@ input:focus {
 
 .modal-container {
   align-items: center;
-  background-color: rgba(233, 228, 228, 0.2);
+  background-color: rgba(228, 228, 233, 0.2);
   display: none;
   height: 100vh;
   justify-content: center;
@@ -345,18 +354,30 @@ input:focus {
   width: 100vw;
 }
 
+#modal-header {
+  outline: 3px solid (--azul)
+}
+
 .modal {
   align-items: center;
   background-color: var(--azul);
   border-radius: 5px;
-  border: 2px solid var(--gris-oscuro);
+  border: 2px solid #001a43;
   display: flex;
   flex-direction: column;
-  height: 700px;
+  height: 600px;
   justify-content: center;
   position: fixed;
-  top: 15%;
+  top: 5%;
   width: 700px;
+  padding: 56px;
+}
+
+.modal-text {
+  color: var(--blanco);
+  font-family: var(--secondary-font);
+  font-size: 24px;
+  font-weight: bold;
 }
 
 .modal-project-image {
